[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
tokio = { version = "1", features = ["full"] }

log = { version = "0.4.20" } #for logging
femme = { version = "2.2.1" }


[[bin]]
name = "main"
path = "src/main.rs"

# [[bin]]
# name = "server"
# path = "src/server.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"
